# IcoScope

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  canary.txt  pyproject.toml
.github/workflows/: ci.yml
gui_tests/: README.md  conftest.py  pytest.ini  test_audit_camera_throttle.py  test_audit_correctness.py  test_audit_coverage.py  test_audit_empty_pane_render.py  test_audit_hygiene.py  test_audit_layout_dedup.py  test_audit_state_reads.py  test_audit_time_locked_slider.py  test_clim_shared.py  test_pane_switch_widgets.py  test_pick_reentrancy.py  test_pick_state_clears.py  test_pick_sync.py  test_playback_loop.py  test_time_cursor_sync.py  test_timeline_strip.py  test_timeline_strip_phase2.py
src/icoscope/: __init__.py  __main__.py  app.py  cli.py  coastlines.py  controls.py  display_block.py  export.py  export_dialog.py  formatters.py  graticule.py  grid.py  loader.py  lonlat.py  menubar.py  panes.py  picker.py  playback.py  tabs.py  themes.py  time_axis.py  timeline.py  widgets.py
tests/: test_cell_value_format.py  test_composite_export.py  test_dyn3d_field.py  test_grid.py  test_level_unit_classify.py  test_lmdz_zoom.py  test_loader.py  test_lonlat.py  test_schmidt.py  test_time_axis.py  test_xios_latlon.py
tools/: make_dyn3d_test_nc.py  make_test_nc.py  run_local_checks.sh
